apps/split-app-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: splitappbackend
  labels:
    app: splitappbackend
spec:
  selector:
    matchLabels:
      app: splitappbackend
  template:
    metadata:
      labels:
        app: splitappbackend
    spec:
      containers:
        - name: splitappbackend
          image: ghcr.io/diezfx/split-app-backend:main
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - name: api
              containerPort: 8080
