apps/split-app-backend/deployment_debug.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testing
  labels:
    app: testing
spec:
  selector:
    matchLabels:
      app: testing
  template:
    metadata:
      labels:
        app: testing
    spec:
      volumes:
        - name: json-configmap-volume
          configMap:
            name: postgres
        - name: postgres-secret-volume
          secret:
            secretName: postgres
      containers:
        - name: testing
          image: ubuntu:latest
          imagePullPolicy: Always

          # Just spin & wait forever
          command: ["/bin/bash", "-c", "--"]
          args: ["while true; do sleep 30; done;"]
          resources:
            limits:
              memory: "128Mi"
              cpu: "300m"
          volumeMounts:
            - mountPath: /etc/config
              name: json-configmap-volume
            - mountPath: /etc/secrets/postgres
              name: postgres-secret-volume
          ports:
            - name: api
              containerPort: 8080
