apps/split-app-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: split-app-backend-service
spec:
  selector:
    app: split-app-backend
  ports:
    - port: 80
      name: api
      targetPort: api
