apps/split-app-backend/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: split-app-backend-gateway
spec:
  #    The selector matches the ingress gateway pod labels.
  #    If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingress # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
#    - port:
#        number: 443
#        name: https
#        protocol: HTTPS
#      tls:
#        mode: SIMPLE
#        credentialName: duckdns-domain-cert-prod
#      hosts:
#       - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: split-app-backend
spec:
  hosts:
    - "*"
  gateways:
    - split-app-backend-gateway
  http:
    - match:
        - uri:
            prefix: /split/
      rewrite:
        uri: "/"
      route:
        - destination:
            host: split-app-backend-service
            port:
              number: 80
